package com.motracoca.model;


public record Service (Long id, String name) {

}
